Fixed warnings resulting from moving to java 17